# gen/http/openapi3.yaml
@@ -20,9 +20,9 @@ paths:
         schema:
           type: integer
           description: Left operand
-          example: 8034677293779011882
+          example: 6274774263990246098
           format: int64
-        example: 36983429280391996
+        example: 8772383573469667603
       - name: b
         in: path
         description: Right operand
@@ -30,9 +30,9 @@ paths:
         schema:
           type: integer
           description: Right operand
-          example: 1553051376274246529
+          example: 642855678666445674
           format: int64
-        example: 2598324719697404761
+        example: 4796886610394838812
       responses:
         "200":
           description: OK response.
@@ -40,9 +40,9 @@ paths:
             application/json:
               schema:
                 type: integer
-                example: 7305426396677949776
+                example: 231556830795426650
                 format: int64
-              example: 7905194824815223204
+              example: 4079719202739215936
   /goa_starter-calc/{c}/{d}:
     get:
       tags:
@@ -57,9 +57,9 @@ paths:
         schema:
           type: integer
           description: Left operand
-          example: 3481953999106781257
+          example: 6526759166464312148
           format: int64
-        example: 1253733055766829795
+        example: 8500543370056168275
       - name: d
         in: path
         description: Right operand
@@ -67,9 +67,9 @@ paths:
         schema:
           type: integer
           description: Right operand
-          example: 6782716350968002240
+          example: 6547285293513267191
           format: int64
-        example: 8024987327736100917
+        example: 310909162285297761
       responses:
         "200":
           description: OK response.
@@ -77,12 +77,93 @@ paths:
             application/json:
               schema:
                 type: integer
-                example: 7241277749342655831
+                example: 5310903401474905607
                 format: int64
-              example: 8969694167088891872
-components: {}
+              example: 107036298886939717
+  /term_limit:
+    get:
+      tags:
+      - term_limit
+      summary: get term_limit
+      operationId: term_limit#get
+      parameters:
+      - name: muid
+        in: query
+        description: endUserのMUID
+        allowEmptyValue: true
+        required: true
+        schema:
+          type: string
+          description: endUserのMUID
+          example: Non aut hic ad quas occaecati.
+        example: Distinctio eum.
+      - name: media_id
+        in: query
+        description: メディアID
+        allowEmptyValue: true
+        required: true
+        schema:
+          type: integer
+          description: メディアID
+          example: 2990014385744433363
+        example: 9664590053623078766
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GetRequestBody'
+            example:
+              id: 36983429280391996
+      responses:
+        "200":
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TermLimitResponse'
+              example:
+                id: 12732875061654047267
+                offer_id: 17886094208800930232
+                status: 17302088795891932825
+components:
+  schemas:
+    GetRequestBody:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: term_limit のID
+          example: 5447009566346633253
+          format: int64
+      example:
+        id: 3792454222488267752
+      required:
+      - id
+    TermLimitResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 14693028899358690627
+        offer_id:
+          type: integer
+          example: 17604739046838229994
+        status:
+          type: integer
+          example: 5583667803166216974
+      example:
+        id: 10334359609419376735
+        offer_id: 1845652532488377575
+        status: 13850548569705274685
+      required:
+      - id
+      - offer_id
+      - status
 tags:
 - name: goa_starter
   description: The goa_starter service performs operations on numbers.
 - name: goa_starter-calc
   description: The goa_starter-calc service performs operations on numbers.
+- name: term_limit
+  description: OW表示可能一覧取得
