# gen/http/term_limit/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.4.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the term_limit service.
+//
+// Command:
+// $ goa gen goa_starter/design
+
+package server
+
+// GetTermLimitPath returns the URL path to the term_limit service get HTTP endpoint.
+func GetTermLimitPath() string {
+	return "/term_limit"
+}
