# gen/term_limit/endpoints.go
@@ -1,0 +1,45 @@
+// Code generated by goa v3.4.3, DO NOT EDIT.
+//
+// term_limit endpoints
+//
+// Command:
+// $ goa gen goa_starter/design
+
+package termlimit
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "term_limit" service endpoints.
+type Endpoints struct {
+	Get goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "term_limit" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		Get: NewGetEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "term_limit" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.Get = m(e.Get)
+}
+
+// NewGetEndpoint returns an endpoint function that calls the method "get" of
+// service "term_limit".
+func NewGetEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req interface{}) (interface{}, error) {
+		p := req.(*GetPayload)
+		res, err := s.Get(ctx, p)
+		if err != nil {
+			return nil, err
+		}
+		vres := NewViewedTermLimitResponse(res, "default")
+		return vres, nil
+	}
+}
